Closing bug #232 human readable message for empty tables

--- a/Widgets/Base.scripts/Widgets.css
+++ b/Widgets/Base.scripts/Widgets.css
@@ -125,6 +125,11 @@ input.error,
  padding: 2px;
 }
 
+.Webwidgets-Widgets-TableMod-Table .empty_table_message {
+ padding: 6px;
+ text-align: center;
+}
+
 .Webwidgets-Widgets-TableMod-Table table {
  width: 100%;
  border: solid 1px black;
